--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "jest-serializer": "^23.0.1",
     "react": "16.6.1",
     "react-native": "^0.57.7",
+    "react-native-elements": "^1.0.0-beta7",
     "react-native-gesture-handler": "^1.0.10",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.8"
   },
   "devDependencies": {
