--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.16.4",
     "jest-serializer": "^23.0.1",
+    "jsonwebtoken": "^8.4.0",
+    "mysql": "^2.16.0",
     "react": "16.6.1",
     "react-native": "^0.57.7",
     "react-native-elements": "^1.0.0-beta7",
