--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "firebase": "^5.7.1",
     "jest-serializer": "^23.0.1",
     "jsonwebtoken": "^8.4.0",
     "mysql": "^2.16.0",
@@ -17,7 +18,7 @@
     "react-native": "^0.57.7",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-gesture-handler": "^1.0.10",
-    "react-native-vector-icons": "^6.1.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^3.0.8"
   },
   "devDependencies": {
