--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,9 +139,18 @@ android {
 dependencies {
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
+    compile project(':react-native-firebase')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+
+    implementation "com.google.android.gms:play-services-base:16.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.4"
+    implementation "com.google.firebase:firebase-auth:16.0.4"
+    
 }
 
 // Run this once to be able to run the application with BUCK
@@ -150,3 +159,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
