--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.6.1",
     "react-native": "^0.57.7",
     "react-native-elements": "^1.0.0-beta7",
+    "react-native-firebase": "^5.1.1",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^3.0.8"
