--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.6.1",
-    "react-native": "^0.57.7",
+    "react": "^16.6.3",
+    "react-native": "^0.57.8",
     "react-native-elements": "^1.0.0-beta7",
-    "react-native-firebase": "^5.1.1",
+    "react-native-firebase": "^5.2.2",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-vector-icons": "^5.0.0",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.3.0"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
     "metro-react-native-babel-preset": "0.50.0",
     "react-test-renderer": "16.6.1"
   },
